<resources>
    <string name="app_name">Коды регионов</string>
    <string name="insert_reg">Введите номер региона</string>
    <string name="xxx">XXX</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bC">C</string>
    <string name="bBs">BSP</string>
    <string name="AllRegions">Коды всех регионов</string>
    // menu
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>


</resources>
